fix navigation mobile

--- a/src/main/webapp/assets/css/base.css
+++ b/src/main/webapp/assets/css/base.css
@@ -358,7 +358,7 @@ p {
     justify-content: space-around;
     border: 1px solid rgba(17, 17, 17, 0.3);
     border-radius: 8px;
-    padding: 16px 0!important;
+    padding: 16px 8px!important;
     margin-top: 8px;
     background-color: rgba(34, 34, 34, 0.9);
     transition: 0.4 all;
@@ -381,6 +381,8 @@ p {
 .offcanvas-body .nav-link {
     color: #000;
     text-shadow: none;
+    display: flex;
+    justify-content: space-between;
 }
 
 }
